# VanDash

./: VANDASH_PRD.md  install.sh  launch.sh  main.py  pyproject.toml  system-packages.txt
backend/app/: main.py
backend/app/config/: settings.py
backend/app/logging/: logger.py
backend/app/services/: camera.py  health.py  obd.py  simulation.py  system.py
config/: example.yaml  maintenance.yaml  operational.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_WORKFLOW.md  INTERNAL_ARCHITECTURE_DEEP_DIVE.md  MOBILE_STRATEGY.md  RUNBOOK.md  SYSTEM_WALKTHROUGH.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: StatusCorner.tsx  TelemetryGrid.tsx
frontend/src/components/Gauges/: ArcGauge.tsx  BeamGauge.tsx  DigitGauge.tsx
frontend/src/views/: DiagnosticsView.tsx  SentinelView.tsx
scripts/: deploy_to_pi.sh  vandash-backend.service
