[project]
name = "vandash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "obd>=0.7.3",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.40.0",
]
